--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "scripts": {
     "start": "HTTPS=true react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && deploy.sh",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
